Story 2: Textareas and button added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	</title>
 </head>
 <body>
+<div class="CentralArea">
+	<textarea class="ChatContent">some text</textarea>
+	<div>
+		<textarea class="ChatContent">some text</textarea>
+		<button>SEND</button>
+	</div>
+</div>
 
 </body>
 </html>
